@@ -579,7 +579,7 @@ def mkdir_p(path):
   except OSError as exc: # Python >2.5
     if exc.errno == errno.EEXIST and os.path.isdir(path):
       pass
-    else: raise
+    else: raise IOError
 
 def getFiles(folder, ftype = os.path.isfile):
   """
